Devs need instant knowledge of bad support in browser

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     <head>
         <title>itslearning offline workshop</title>
     </head>
+
+    <script src="lib/compatibility-check.js"></script>
+
     <body>
         <h1>Examples</h1>
         <nav>
