Firefox warning for missing content type is distracting for devs

--- a/example1/example1.html
+++ b/example1/example1.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8">
         <title>Example 1</title>
         <link rel="stylesheet" href="http://localhost:8000/lib/styles.css">
         <script src="http://localhost:8000/example1/example1.js"></script>
