--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
         <title>itslearning offline workshop</title>
     </head>
 
-    <script src="lib/compatibility-check.js"></script>
+    <script src="compatibility-check.js"></script>
 
     <body>
         <h1>Examples</h1>
         <nav>
             <ul>
-                <li><a href="example1/example1.html">Example 1</a></li>
+                <li><a href="examples/example1/example1.html">Example 1</a></li>
+                <li><a href="examples/example2/example2.html">Example 2</a></li>
             </ul>
         </nav>
     </body>
