--- a/examples/2/index.html
+++ b/examples/2/index.html
@@ -2,9 +2,9 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Example 1</title>
-        <link rel="stylesheet" href="http://localhost:8000/lib/styles.css">
-        <script src="http://localhost:8000/example1/example1.js"></script>
+        <title>Example 2</title>
+        <link rel="stylesheet" href="http://localhost:8000/examples/styles.css">
+        <script src="http://localhost:8000/examples/2/app.js"></script>
     </head>
 
     <body>
