OK, I've been hacking, bit of a mess right now

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <h1>Examples</h1>
         <nav>
             <ul>
-                <li><a href="examples/example1/example1.html">Example 1</a></li>
-                <li><a href="examples/example2/example2.html">Example 2</a></li>
+                <li><a href="examples/1/">Example 1</a></li>
+                <li><a href="examples/2/">Example 2</a></li>
             </ul>
         </nav>
     </body>
