Added offline detection example

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
         <h1>Examples</h1>
         <nav>
             <ul>
-                <li><a href="examples/1/">Example 1</a></li>
-                <li><a href="examples/2/">Example 2</a></li>
+                <li><a href="examples/0/">0. Offline detection</a></li>
+                <li><a href="examples/1/">1. ServiceWorker Lifecycle</a></li>
+                <li><a href="examples/2/">2. ServiceWorker, CacheStorage and Cache API</a></li>
             </ul>
         </nav>
     </body>
