Finished basic offline detection files

--- a/examples/0/index.html
+++ b/examples/0/index.html
@@ -8,6 +8,6 @@
     </head>
 
     <body>
-        <h1 class="news-items-heading">0: Offline detection</h1>
+        <h1 class="example-heading">0: Offline detection</h1>
     </body>
 </html>
