--- a/examples/2/index.html
+++ b/examples/2/index.html
@@ -5,6 +5,7 @@
         <title>2. ServiceWorker, CacheStorage and Cache API</title>
         <link rel="stylesheet" href="http://localhost:8000/examples/2/styles.css">
         <script src="http://localhost:8000/examples/2/app.js"></script>
+        <script src="http://localhost:8000/examples/2/offline-detection.js"></script>
     </head>
 
     <body>
