--- a/examples/0/index.html
+++ b/examples/0/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8">
         <title>0: Offline detection</title>
-        <link rel="stylesheet" href="http://localhost:8000/examples/styles.css">
-        <script src="http://localhost:8000/examples/0/app.js"></script>
+        <link rel="stylesheet" href="styles.css">
+        <script src="app.js"></script>
     </head>
 
     <body>
