--- a/examples/1/index.html
+++ b/examples/1/index.html
@@ -4,8 +4,8 @@
         <meta charset="utf-8">
         <title>1. ServiceWorker API</title>
 
-        <link rel="stylesheet" href="http://localhost:8000/examples/1/styles.css">
-        <script src="http://localhost:8000/examples/1/app.js"></script>
+        <link rel="stylesheet" href="styles.css">
+        <script src="app.js"></script>
     </head>
 
     <body>
