--- a/examples/2/index.html
+++ b/examples/2/index.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="utf-8">
         <title>2. ServiceWorker, CacheStorage and Cache API</title>
-        <link rel="stylesheet" href="http://localhost:8000/examples/2/styles.css">
-        <script src="http://localhost:8000/examples/2/app.js"></script>
-        <script src="http://localhost:8000/examples/2/offline-detection.js"></script>
+        <link rel="stylesheet" href="styles.css">
+        <script src="app.js"></script>
+        <script src="offline-detection.js"></script>
     </head>
 
     <body>
