--- a/examples/3/index.html
+++ b/examples/3/index.html
@@ -2,13 +2,15 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>2. ServiceWorker intercept request</title>
+        <title>3. Cache API example</title>
 
         <link rel="stylesheet" href="styles.css">
         <script src="app.js"></script>
     </head>
 
     <body>
-        <h1 class="example-heading">2. ServiceWorker intercept request</h1>
+        <h1 class="example-heading">3. ServiceWorker cache request example</h1>
+
+        <h2 id="output">Output: </h2>
     </body>
 </html>
