--- a/examples/2/index.html
+++ b/examples/2/index.html
@@ -2,13 +2,12 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>2. ServiceWorker intercept request</title>
-
-        <link rel="stylesheet" href="styles.css">
+        <title>2. ServiceWorker intercept request example</title>
         <script src="app.js"></script>
     </head>
 
     <body>
-        <h1 class="example-heading">2. ServiceWorker intercept request</h1>
+        <h1 class="example-heading">2. ServiceWorker intercept request example</h1>
+        <section id="output"></section>
     </body>
 </html>
