--- a/examples/1/index.html
+++ b/examples/1/index.html
@@ -2,13 +2,13 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>1. ServiceWorker API</title>
+        <title>1. ServiceWorker Lifecycle and events</title>
 
         <link rel="stylesheet" href="styles.css">
         <script src="app.js"></script>
     </head>
 
     <body>
-        <h1 class="example-heading">1. ServiceWorker API</h1>
+        <h1 class="example-heading">1. ServiceWorker Lifecycle and events</h1>
     </body>
 </html>
