--- a/examples/0/index.html
+++ b/examples/0/index.html
@@ -2,12 +2,12 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>0: Offline detection</title>
+        <title>0. Offline detection</title>
         <link rel="stylesheet" href="styles.css">
         <script src="app.js"></script>
     </head>
 
     <body>
-        <h1 class="example-heading">0: Offline detection</h1>
+        <h1 class="example-heading">0. Offline detection</h1>
     </body>
 </html>
