--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
         <h1>Examples</h1>
         <nav>
             <ul>
-                <li><a href="examples/0/">0. Offline detection</a></li>
-                <li><a href="examples/1/">1. ServiceWorker Lifecycle</a></li>
-                <li><a href="examples/2/">2. ServiceWorker, CacheStorage and Cache API</a></li>
+                <li><a href="examples/0">0. Offline detection</a></li>
+                <li><a href="examples/1">1. ServiceWorker: Basic usage and lifecycle</a></li>
+                <li><a href="examples/2">2. ServiceWorker: Intercept request, modify response</a></li>
+                <li><a href="examples/3">3. CacheStorage:  Basic usage</a></li>
+                <li><a href="examples/4">4. CacheStorage and ServiceWorker: Offline fallback to basic template</a></li>
+                <li><a href="examples/5">5. IndexedDB: Basic usage</a></li>
             </ul>
         </nav>
     </body>
