Setup markup and styles for the online indicator

--- a/application/index.html
+++ b/application/index.html
@@ -34,5 +34,9 @@
                 </div>
             </div>
         </div>
+        <footer id="online-indicator" class="online">
+            <p class="is-online">You are online</p>
+            <p class="is-offline">You are offline</p>
+        </footer>
     </body>
 </html>
