--- a/application/index.html
+++ b/application/index.html
@@ -11,6 +11,8 @@
         <link rel="stylesheet" href="css/pure/grids-responsive-min.css">
         <link rel="stylesheet" href="css/news.css">
 
+        <link rel="stylesheet" href="css/components/network-indicator.css">
+
         <script src="lib/news-helper.js"></script>
         <script src="app.js"></script>
     </head>
