--- a/application-finished/index.html
+++ b/application-finished/index.html
@@ -9,9 +9,13 @@
 
         <link rel="stylesheet" href="css/pure/pure-min.css">
         <link rel="stylesheet" href="css/pure/grids-responsive-min.css">
+
         <link rel="stylesheet" href="css/news.css">
+        <link rel="stylesheet" href="css/components/network-indicator.css">
 
         <script src="lib/news-helper.js"></script>
+        <script src="lib/network-indicator.js"></script>
+
         <script src="app.js"></script>
     </head>
 
