Trying to organise a pattern for the workshop, helpers and flow

--- a/workshop/2/start/index.html
+++ b/workshop/2/start/index.html
@@ -9,12 +9,12 @@
 
         <link rel="stylesheet" href="css/pure/pure-min.css">
         <link rel="stylesheet" href="css/pure/grids-responsive-min.css">
-
         <link rel="stylesheet" href="css/news.css">
+
         <link rel="stylesheet" href="css/components/network-indicator.css">
 
         <script src="lib/news-helper.js"></script>
-
+        <script src="lib/network-indicator.js"></script>
         <script src="app.js"></script>
     </head>
 
