--- a/workshop/0/start/index.html
+++ b/workshop/0/start/index.html
@@ -30,13 +30,13 @@
             <div class="content pure-u-1 pure-u-md-3-4">
                 <div>
                     <section class="news">
-                        <h1 id="recent-news-header" class="content-subhead">Recent News</h1>
+                        <h1 id="" class="content-subhead">Recent News</h1>
                         <section id="news-items"></section>
                     </section>
                 </div>
             </div>
         </div>
-        <footer id="online-indicator" class="online">
+        <footer id="network-indicator" class="online">
             <p class="is-online">You are online</p>
             <p class="is-offline">You are offline</p>
         </footer>
