--- a/workshop/1/finished/index.html
+++ b/workshop/1/finished/index.html
@@ -14,6 +14,7 @@
         <link rel="stylesheet" href="css/components/network-indicator.css">
 
         <script src="lib/news-helper.js"></script>
+        <script src="lib/network-indicator.js"></script>
 
         <script src="app.js"></script>
     </head>
