--- a/workshop/1/start/index.html
+++ b/workshop/1/start/index.html
@@ -14,6 +14,7 @@
         <link rel="stylesheet" href="css/components/network-indicator.css">
 
         <script src="lib/news-helper.js"></script>
+        <script src="lib/network-indicator.js"></script>
 
         <script src="app.js"></script>
     </head>
@@ -31,7 +32,7 @@
             <div class="content pure-u-1 pure-u-md-3-4">
                 <div>
                     <section class="news">
-                        <h1 id="" class="content-subhead">Recent News</h1>
+                        <h1 class="content-subhead">Recent News</h1>
                         <section id="news-items"></section>
                     </section>
                 </div>
