removing empty id

--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
     <script src="compatibility-check.js"></script>
 
     <body>
+        <h1>Workshops</h1>
+        <nav>
+            <ul>
+                <li><a href="workshops/0">0. Offline detection</a></li>
+                <li><a href="workshops/1">1. ServiceWorker: Basic usage and lifecycle</a></li>
+                <li><a href="workshops/2">2. Intercept request, modify response</a></li>
+                <li><a href="workshops/3">3. CacheStorage:  Basic usage</a></li>
+                <li><a href="workshops/4">4. Return cached assets</a></li>
+                <li><a href="workshops/5">5. Cache and return assets</a></li>
+                <li><a href="workshops/6">6. Background sync</a></li>
+            </ul>
+        </nav>
+
         <h1>Examples</h1>
         <nav>
             <ul>
