--- a/workshop/5/finished/index.html
+++ b/workshop/5/finished/index.html
@@ -34,7 +34,7 @@
             <div class="content pure-u-1 pure-u-md-3-4">
                 <div>
                     <section class="news">
-                        <h1 id="" class="content-subhead">Recent News</h1>
+                        <h1  class="content-subhead">Recent News</h1>
                         <section id="news-items"></section>
                     </section>
                 </div>
