--- a/workshop/6/start/index.html
+++ b/workshop/6/start/index.html
@@ -12,11 +12,13 @@
 
         <link rel="stylesheet" href="css/news.css">
         <link rel="stylesheet" href="css/components/network-indicator.css">
+        <link rel="stylesheet" href="css/components/add-button.css">
 
-        <script src="lib/news-helper.js"></script>
-        <script src="lib/service-worker-helper.js"></script>
+        <script src="lib/helpers/news-helper.js"></script>
+        <script src="lib/helpers/service-worker-helper.js"></script>
 
-        <script src="lib/network-indicator.js"></script>
+        <script src="lib/components/network-indicator.js"></script>
+        <script src="lib/components/news-form.js"></script>
 
         <script src="app.js"></script>
     </head>
@@ -34,11 +36,12 @@
             <div class="content pure-u-1 pure-u-md-3-4">
                 <div>
                     <section class="news">
-                        <h1 id="" class="content-subhead">Recent News</h1>
+                        <h1 class="content-subhead">Recent News</h1>
                         <section id="news-items"></section>
                     </section>
                 </div>
             </div>
+            <button id="add-news" class="add-button">Add news</button>
         </div>
         <footer id="network-indicator" class="online">
             <p class="is-online">You are online</p>
