--- a/workshop/6/start/index.html
+++ b/workshop/6/start/index.html
@@ -13,6 +13,7 @@
         <link rel="stylesheet" href="css/news.css">
         <link rel="stylesheet" href="css/components/network-indicator.css">
         <link rel="stylesheet" href="css/components/add-button.css">
+        <link rel="stylesheet" href="css/components/news-form.css">
 
         <script src="lib/helpers/news-helper.js"></script>
         <script src="lib/helpers/service-worker-helper.js"></script>
