--- a/workshop/6/start/index.html
+++ b/workshop/6/start/index.html
@@ -15,6 +15,8 @@
         <link rel="stylesheet" href="css/components/add-button.css">
         <link rel="stylesheet" href="css/components/news-form.css">
 
+        <script src="lib/jquery.js"></script>
+
         <script src="lib/helpers/news-helper.js"></script>
         <script src="lib/helpers/service-worker-helper.js"></script>
 
