--- a/workshop/6/start/index.html
+++ b/workshop/6/start/index.html
@@ -10,6 +10,8 @@
         <link rel="stylesheet" href="css/pure/pure-min.css">
         <link rel="stylesheet" href="css/pure/grids-responsive-min.css">
 
+        <link rel="stylesheet" href="css/animations.css">
+
         <link rel="stylesheet" href="css/news.css">
         <link rel="stylesheet" href="css/components/network-indicator.css">
         <link rel="stylesheet" href="css/components/add-button.css">
