Building on the indexeddb example

--- a/examples/indexeddb/index.html
+++ b/examples/indexeddb/index.html
@@ -8,5 +8,6 @@
 
     <body>
         <h1 class="example-heading">5. IndexedDB example</h1>
+        <button type="button" id="run-code">Run code</button>
     </body>
 </html>
