Added example for lookup by id

--- a/examples/indexeddb/index.html
+++ b/examples/indexeddb/index.html
@@ -8,6 +8,9 @@
 
     <body>
         <h1 class="example-heading">5. IndexedDB example</h1>
-        <button type="button" id="run-code">Run code</button>
+        <button type="button" id="get-all">Get all</button>
+        <br>
+        <button type="button" id="get-one">Get one</button>
+        <input id="id-to-get">
     </body>
 </html>
