Placeholder to show what to do with the input

--- a/examples/indexeddb/index.html
+++ b/examples/indexeddb/index.html
@@ -11,6 +11,6 @@
         <button type="button" id="get-all">Get all</button>
         <br>
         <button type="button" id="get-one">Get one</button>
-        <input id="id-to-get">
+        <input id="id-to-get" placeholder="id of db item">
     </body>
 </html>
