--- a/examples/indexeddb/index.html
+++ b/examples/indexeddb/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>5. IndexedDB example</title>
+        <title>IndexedDB example</title>
         <script src="app.js"></script>
     </head>
 
