Added delete functionality to the indexeddb example

--- a/examples/indexeddb/index.html
+++ b/examples/indexeddb/index.html
@@ -12,5 +12,7 @@
         <br>
         <button type="button" id="get-one">Get one</button>
         <input id="id-to-get" placeholder="id of db item">
+        <br>
+        <button type="button" id="delete-db">Delete database</button>
     </body>
 </html>
