--- a/workshop/6/start/index.html
+++ b/workshop/6/start/index.html
@@ -23,6 +23,8 @@
         <script src="lib/components/news-form.js"></script>
 
         <script src="app.js"></script>
+
+        <script src="background-sync.js"></script>
     </head>
 
     <body>
