Reconnecting the index page and editing the main README

--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
                 <li><a href="workshops/3">3. CacheStorage:  Basic usage</a></li>
                 <li><a href="workshops/4">4. Return cached assets</a></li>
                 <li><a href="workshops/5">5. Cache and return assets</a></li>
-                <li><a href="workshops/6">6. Background sync</a></li>
             </ul>
         </nav>
 
         <h1>Examples</h1>
         <nav>
             <ul>
-                <li><a href="examples/0">0. Offline detection</a></li>
-                <li><a href="examples/1">1. ServiceWorker: Basic usage and lifecycle</a></li>
-                <li><a href="examples/2">2. ServiceWorker: Intercept request, modify response</a></li>
-                <li><a href="examples/3">3. CacheStorage:  Basic usage</a></li>
-                <li><a href="examples/4">4. CacheStorage and ServiceWorker: Offline fallback to basic template</a></li>
-                <li><a href="examples/5">5. IndexedDB: Basic usage</a></li>
+                <li><a href="examples/offline-detection">Offline detection</a></li>
+                <li><a href="examples/service-worker-lifecycle">ServiceWorker lifecycle</a></li>
+                <li><a href="examples/sw-intercept-request">ServiceWorker: Intercept request, modify response</a></li>
+                <li><a href="examples/cache-api">CacheStorage:  Basic usage</a></li>
+                <li><a href="examples/offline-fallback">CacheStorage and ServiceWorker: Offline fallback to basic template</a></li>
+                <li><a href="examples/indexeddb">IndexedDB: Basic usage</a></li>
+                <li><a href="examples/dexie">Dexie: a wrapper for IndexedDB</a></li>
             </ul>
         </nav>
     </body>
