--- a/examples/fetch-network-priority/index.html
+++ b/examples/fetch-network-priority/index.html
@@ -2,13 +2,13 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>3. ServiceWorker, CacheStorage and Cache API</title>
+        <title>Fetch network priority</title>
         <link rel="stylesheet" href="styles.css">
         <script src="app.js"></script>
         <script src="offline-detection.js"></script>
     </head>
 
     <body>
-        <h1 class="example-heading">3. ServiceWorker, CacheStorage and Cache API</h1>
+        <h1 class="example-heading">Fetch network priority</h1>
     </body>
 </html>
