--- a/workshop/3/finished/index.html
+++ b/workshop/3/finished/index.html
@@ -39,7 +39,7 @@
                 </div>
             </div>
         </div>
-        <footer id="network-indicator" class="online">
+        <footer id="network-indicator" class="online" role="alert" aria-live="assertive">
             <p class="is-online">You are online</p>
             <p class="is-offline">You are offline</p>
         </footer>
